Fixed grid alignment with page title

--- a/_sass/ais/join.scss
+++ b/_sass/ais/join.scss
@@ -9,10 +9,18 @@
 
     position: relative;
     top: -20px;
+    padding-left: 0px;
+    padding-right: 50px;
+    margin-left: -26px;
 }
 
 .form-input {
     color: black !important;
+}
+
+#description-block {
+    padding-left: 0px;
+    padding-right: 50px;
 }
 
 #mc-embedded-subscribe {
